[tool.poetry]
name = "allusgov"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Scrapy = "^2.8.0"
polars = "^0.16.14"
xlsx2csv = "^0.8.1"
python-dotenv = "^1.0.0"
networkx = {extras = ["default"], version = "^3.0"}
bigtree = {extras = ["image"], version = "^0.9.0"}
flatten-json = "^0.1.13"
rapidfuzz = "^2.15.0"

[tool.poetry.group.dev.dependencies]
black = {version = "^23.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
merge = "merge.merge:main"